removed the template_dirs deprecated argument to fix loader error under django 2

--- a/common/djangoapps/pipeline_mako/templates/static_content.html
+++ b/common/djangoapps/pipeline_mako/templates/static_content.html
@@ -97,7 +97,7 @@ engine = Engine(dirs=dirs)
 loader = Loader(engine)
 
 source = None
-for origin in loader.get_template_sources(path, dirs):
+for origin in loader.get_template_sources(path):
     try:
         source = loader.get_contents(origin)
     except TemplateDoesNotExist:
